# Graphs

./: .gitignore
Coursework/: Allergy.clp  Report.tex  TZ.tex  Tree.txt  Tree_allergy.drawio
Coursework/Tree_allergy_last/: Tree_allergy.drawio
Report_labs/: chapter1_math.tex  chapter2_impl.tex  chapter3_results.tex  conclusion.tex  config.tex  introduction.tex  main.tex  raspred.py  references.tex  title_page.tex
lab1/: CMakeLists.txt
lab1/include/: common_structures.h  generate_graphs.h  routes.h
lab1/src/: common_structures.cpp  generate_graphs.cpp  main.cpp  routes.cpp
lab2/: CMakeLists.txt
lab2/include/: shimbell.h  shortest_paths.h
lab2/src/: articulation.cpp  main.cpp
lab3/: CMakeLists.txt
lab3/include/: flows.h  generate_graphs.h  shortest_paths.h
lab3/src/: articulation.cpp  flows.cpp  generate_graphs.cpp  main.cpp  shortest_paths.cpp
lab4/: CMakeLists.txt
lab4/include/: boruvka.h  coloring.h  kirchhoff.h  prufer.h
lab4/src/: boruvka.cpp  coloring.cpp  common_structures.cpp  flows.cpp  kirchhoff.cpp  main.cpp  metrics.cpp  prufer.cpp  shortest_paths.cpp
lab5/: CMakeLists.txt
lab5/include/: articulation.h  boruvka.h  coloring.h  common_structures.h  cuts.h  euler.h  metrics.h  shortest_paths.h
lab5/src/: cuts.cpp  euler.cpp  generate_graphs.cpp  main.cpp  prufer.cpp  shimbell.cpp
